--- a/EPC9.ipynb
+++ b/EPC9.ipynb
@@ -483,6 +483,7 @@
     }
    ],
    "source": [
+    "# TODO ver como fazer histograma com frequencia relativa\n",
     "fig, ax = plt.subplots(figsize=(12, 5), ncols=2)\n",
     "ax[0].hist(betas_0, histtype='step', color='blue')\n",
     "ax[1].hist(betas_1)\n",
