--- a/EPC9.ipynb
+++ b/EPC9.ipynb
@@ -1055,7 +1055,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.3 ('gans_trajsp3')",
+   "display_name": "Python 3.8.10 ('gans_venvp3')",
    "language": "python",
    "name": "python3"
   },
@@ -1069,12 +1069,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "72fba674bb5c41e906a02e56863160eeb44778396691dee4e92ebdc1318766f3"
+    "hash": "073df714236677e0b8b6e001dd3f94f35e3f36cdcb7f611c8d5653872113c792"
    }
   }
  },
